# cozyctl

./: .gitignore  .gitmodules  README.md  example.config.yaml  go.mod  go.sum  main.go  taskfile.yml
cmd/: auth.go  builds.go  deploy.go  login.go  root.go
cmd/auth/: auth.go  login.go
cmd/deploy/: deploy.go
cmd/login/: login.go
cmd/logout/: logout.go
cmd/profiles/: current.go  delete.go  profiles.go  switch.go
cmd/update/: update.go
cmd/use/: use.go
docs/: login.md
internal/api/: builder_client.go  client.go  client_test.go  types.go
internal/auth/: login.go
internal/config/: config.go
internal/deploy/: deploy.go
internal/login/: login.go
internal/logout/: logout.go
internal/update/: update.go
test/: create_user.py  create_user_db.py  requirements.txt
test/config/sdxl-demo/: Dockerfile  functions.py  pyproject.toml
test/config/sdxl-turbo-worker/: Dockerfile  pyproject.toml  worker.py
