[project]
name = "sdxl-turbo-worker"
version = "0.1.0"
description = "SDXL-Turbo image generation worker for testing"
requires-python = ">=3.10"
dependencies = [
    "gen-worker",
    "msgspec",
    "diffusers>=0.25.0,<0.32.0",
    "transformers>=4.36.0,<4.46.0",
    "accelerate>=0.25.0",
    "safetensors",
    "sentencepiece",
]

[tool.cozy]
deployment-id = "sdxl-turbo-test"

[tool.cozy.build]
gpu = true
cuda = "12.6"
torch = "2.9"

[tool.cozy.environment]
HF_HOME = "/app/.cache/huggingface"

[tool.cozy.models]
sdxl-turbo = "hf:stabilityai/sdxl-turbo"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
