[project]
name = "sdxl-turbo-worker"
version = "0.1.0"
description = "SDXL-Turbo image generation worker for testing"
requires-python = ">=3.10"
dependencies = [
    "diffusers==0.32.2",
    "transformers==4.47.1",
    "accelerate==0.34.2",
    "safetensors",
]

[tool.cozy]
deployment-id = "sdxl-turbo-test"
name = "worker"
python = "3.11"
pytorch = "2.5"
cuda = "12.6"
predict = "from worker import generate; generate('a beautiful sunset over mountains', '/output/output.png')"

[tool.cozy.environment]
HF_HOME = "/app/.cache/huggingface"
MODEL_PATH = "/models/sdxl-turbo"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
